Fix rounding when creating outline selection with Shift modifier

That was a nasty misprint :)

BUG:437048