libs/ui/input/kis_change_primary_setting_action.cpp
@@ -85,7 +85,7 @@ void KisChangePrimarySettingAction::end(QEvent *event)
 void KisChangePrimarySettingAction::inputEvent(QEvent* event)
 {
     if (event && (event->type() == QEvent::MouseMove || event->type() == QEvent::TabletMove)) {
-        QMouseEvent targetEvent(QEvent::MouseMove, eventPos(event), Qt::NoButton, Qt::LeftButton, Qt::ShiftModifier);
+        QMouseEvent targetEvent(QEvent::MouseMove, eventPosF(event), Qt::NoButton, Qt::LeftButton, Qt::ShiftModifier);
         inputManager()->toolProxy()->forwardEvent(KisToolProxy::CONTINUE, savedAction, &targetEvent, event);
     }
 }
